# django-simulation-project

./: README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
app/collection/: models.py  serializers.py  services.py  views.py
app/com_simulation/: analysis.py  models.py  services.py  validators.py  views.py
app/core/: __init__.py  decorators.py  events.py  exceptions.py  logging.py  middleware.py  models.py  services.py  tasks.py  throttling.py  validators.py
app/core/cache/: __init__.py  backends.py  file_utils.py  manager.py  mixins.py
app/external_data/: adapters.py  factories.py  models.py  monitoring.py  serializers.py  services.py  sync.py  tasks.py  urls.py  validators.py  views.py
app/fom_chi/: models.py  services.py
app/parameter/: analysis.py  handlers.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
app/serder_simulation/: models.py  services.py
services/core-service/core/: settings.py
services/parameter-service/: Dockerfile
